<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>view_sdf_rviz</name>
  <version>0.0.0</version>
  <description>View SDF models in RViz</description>
  <maintainer email="yadunund@gmail.com">Yadunund</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
